--- a/Fase3/ccs/estilos.css
+++ b/Fase3/ccs/estilos.css
@@ -1,27 +1,70 @@
+*{
+    margin: 3px;
+    border-radius: 10px;
+}
 header{
     background-color: rgb(113, 141, 233);
-    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-nav{
-    background-color:rgb(213, 160, 235);
-    padding: 10px;
-}
-section{
-    float:left ;
-    width: 70% ;
-    background-color: rgb(227, 173, 250);
+
+.contenedor{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 aside{
-    float: left;
-    width: 30%;
-    background-color: rgb(210, 131, 243);
+    grid-column: 1/2;
+    background-color: rgb(185, 183, 187);
 }
+section{
+    grid-column: 2/5;
+    background-color: rgb(185, 183, 187);
+}
+
 footer{
-    background-color: rgb(208, 138, 238);
+    text-align: center;
+    background-color: rgb(4, 19, 4);
+    color: white;
     padding: 10px;
 }
-.contenedor::after{
-    content: "";
+.justificado{
+    text-align: justify;
+}
+.centrado{
+    text-align: center;
+}
+/*seccion de estilos para el menú*/
+
+.menu{
+    display: flex;
+}
+nav ul{
+    list-style: none;
+    padding: 5px;
+    color: #fff;
+    background: black;
+}
+.menu li{
+    width: 100%;
+    text-align: center;
+}
+.menu a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: chocolate;
+    height: 25px;
+    text-decoration: none;
+}
+.dropdown li {
+    display: none;
+}
+.menu li:hover .dropdown li {
     display: block;
-    clear: both;
+}
+.menu a:hover {
+    background: blueviolet;
+    color: #fff;
 }
