--- a/RecuperacionFase3/css/misEstilos.css
+++ b/RecuperacionFase3/css/misEstilos.css
@@ -1,9 +1,9 @@
 *{
-    margin: 3px;
-    border-radius: 10px;
+    margin: 5px;
+    border-radius: 3px;
 }
 header{
-    background-color: rgb(113, 141, 233);
+    background-color: rgb(236, 233, 240);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,16 +15,16 @@ header{
 }
 aside{
     grid-column: 1/2;
-    background-color: rgb(185, 183, 187);
+    background-color: rgb(192, 139, 245);
 }
 section{
     grid-column: 2/5;
-    background-color: rgb(185, 183, 187);
+    background-color: rgb(192, 139, 245);
 }
 
 footer{
     text-align: center;
-    background-color: rgb(4, 19, 4);
+    background-color: rgb(37, 18, 122);
     color: white;
     padding: 10px;
 }
@@ -34,30 +34,33 @@ footer{
 .centrado{
     text-align: center;
 }
-/*seccion de estilos para el menú*/
 
-.menu{
+/*  sección de estilos para el menú*/
+
+.menu {
     display: flex;
 }
-nav ul{
+nav ul {
     list-style: none;
     padding: 5px;
     color: #fff;
-    background: black;
+    background: rgba(0, 0, 0, 0.527);
 }
-.menu li{
+.menu li {
     width: 100%;
     text-align: center;
 }
+
 .menu a {
     display: flex;
     align-items: center;
     justify-content: center;
     color: #fff;
-    background: chocolate;
+    background:rgb(68, 8, 83);
     height: 25px;
     text-decoration: none;
 }
+
 .dropdown li {
     display: none;
 }
@@ -65,6 +68,21 @@ nav ul{
     display: block;
 }
 .menu a:hover {
-    background: blueviolet;
+    background:rgb(115, 60, 167);
     color: #fff;
+
+}
+
+
+
+@media (max-width: 600px) {
+    .menu {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    header{
+        flex-direction: column;/* coloca los elementos verticales. */
+        align-items: flex-start;
+        
+    }
 }
